// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag with icon and text renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#E7EFFA",
        "borderRadius": 36,
        "flexDirection": "row",
        "padding": 4,
        "paddingHorizontal": 8,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      Array [
        Object {
          "color": "#000000",
          "fontSize": 16,
        },
        undefined,
        Object {
          "fontFamily": "Material Design Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    󰈈
  </Text>
  <View
    style={
      Object {
        "paddingLeft": 4,
      }
    }
  />
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
          },
          undefined,
        ]
      }
    >
      Tag test
    </Text>
  </View>
</View>
`;

exports[`Tag with icon renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#E7EFFA",
        "borderRadius": 36,
        "flexDirection": "row",
        "padding": 4,
        "paddingHorizontal": 8,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      Array [
        Object {
          "color": "#000000",
          "fontSize": 16,
        },
        undefined,
        Object {
          "fontFamily": "Material Design Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    󰈈
  </Text>
</View>
`;

exports[`Tag with style renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#E7EFFA",
        "borderRadius": 36,
        "flexDirection": "row",
        "padding": 4,
        "paddingHorizontal": 8,
      },
      Object {
        "padding": 24,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
          },
          undefined,
        ]
      }
    >
      Tag test
    </Text>
  </View>
</View>
`;

exports[`Tag with text renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#E7EFFA",
        "borderRadius": 36,
        "flexDirection": "row",
        "padding": 4,
        "paddingHorizontal": 8,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
          },
          undefined,
        ]
      }
    >
      Tag test
    </Text>
  </View>
</View>
`;

exports[`Tag with text style renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#E7EFFA",
        "borderRadius": 36,
        "flexDirection": "row",
        "padding": 4,
        "paddingHorizontal": 8,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
          },
          Object {
            "color": "#7D8285",
          },
        ]
      }
    >
      Tag test
    </Text>
  </View>
</View>
`;
